...
	<string name="warning">Warning</string>
	<string name="error">ERROR</string>
	<string name="errOccur">An error has occurred.</string>
	<string name="wait_a_sec">Just wait a sec…</string>
	<string name="analyzing">Analyzing</string>
	<string name="loading">Loading</string>
	<string name="download">Download</string>
	<string name="downloadWaiting">Download Waiting</string>
	<string name="downloading">Downloading</string>
	<string name="downloaded">Downloaded</string>
	<string name="success">Success</string>
	<string name="failed">Failed</string>
	<string name="delete">Delete</string>
...
	<string name="selected_theme">Selected Theme</string>

	<!--Menu-->
	<string name="reconnect_launchpad">Reconnect Launchpad</string>
	<string name="list_refresh">Refresh List</string>
	<string name="import_unipack">Load Unipack</string>
	<string name="store">Store</string>

	<!--Setting-->
	<string name="setting">Setting</string>
	<string name="information">Information</string>
	<string name="payment">Payment</string>
	<string name="select_theme">Select Theme</string>
...
